[package]
name = "rjchunker"
version = "0.0.1"
authors = ["Jack <jackmead515@gmail.com>"]
edition = "2018"
description = ""
keywords = [ "server", "application", "tcp" ]
categories = [ "rust-patterns" ]
readme = "README.md"
homepage = "https://github.com/jackmead515/rjchunker"
repository = "https://github.com/jackmead515/rjchunker"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
dirs = "2.0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
crossbeam-utils = "0.7.2"
crossbeam-channel = "0.4.3"